start new sm server

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL="postgresql://postgres:acer2494@localhost:5432/local_sportmaster?schema=public"
+DATABASE_URL="postgresql://redmi:postgres@localhost:5432/sportmaster?schema=public"
+TELEGRAM_TOKEN="5813231792:AAECZaN9qzTrbqYclGZ0T_wEVB9JZabvNjQ"
+TELEGRAM_ADMIN_ID=750126398,
