--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.13.0",
     "argon2": "^0.40.1",
+    "cache-manager": "^5.5.2",
+    "md5": "^2.3.0",
     "nestjs-telegraf": "^2.7.0",
     "nestjs-zod": "^3.0.0",
     "passport": "^0.7.0",
@@ -48,8 +50,10 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager": "^4.0.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
