--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/name?schema=public"
 TELEGRAM_TOKEN="58133121792:AAECZadad9qzTrfaYclGZ0T_wEVB9fadaabvNjQ"
 TELEGRAM_ADMIN_ID=730129461,
+ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
+PROXY_LIST="socks5://login:password@ip:port",
