--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ts-check-errors": "tsc --noemit"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -35,6 +36,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.13.0",
     "argon2": "^0.40.1",
+    "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
     "md5": "^2.3.0",
     "nestjs-telegraf": "^2.7.0",
@@ -44,7 +46,9 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.16.3"
+    "socks-proxy-agent": "^8.0.3",
+    "telegraf": "^4.16.3",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -58,6 +62,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
+    "@types/uuid-validate": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
