add error handler tg, change refresh acc

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ TELEGRAM_TOKEN="58133121792:AAECZadad9qzTrfaYclGZ0T_wEVB9fadaabvNjQ"
 TELEGRAM_ADMIN_ID=730129461,
 ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
 PROXY_LIST="socks5://login:password@ip:port",
+TTL_CASH=86400000
