--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ TELEGRAM_ADMIN_ID=730129461,
 ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
 PROXY_LIST="socks5://login:password@ip:port",
 TTL_CASH=86400000
+TIME_DURATION_PROXY_BLOCK_IN_MIN=5
+API_DONOR="https://example.ru/api/"
