--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "argon2": "^0.40.1",
     "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
+    "date-fns": "^3.6.0",
     "md5": "^2.3.0",
     "nestjs-telegraf": "^2.7.0",
     "nestjs-zod": "^3.0.0",
@@ -55,6 +56,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/cache-manager": "^4.0.6",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/md5": "^2.3.5",
