--- a/package.json
+++ b/package.json
@@ -39,9 +39,15 @@
     "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
     "date-fns": "^3.6.0",
+    "emailjs-mime-codec": "^2.0.9",
+    "iconv-lite": "^0.6.3",
+    "imap": "^0.8.19",
+    "mailparser": "^3.7.1",
     "md5": "^2.3.0",
+    "mimelib": "^0.3.1",
     "nestjs-telegraf": "^2.7.0",
     "nestjs-zod": "^3.0.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -49,7 +55,8 @@
     "rxjs": "^7.8.1",
     "socks-proxy-agent": "^8.0.3",
     "telegraf": "^4.16.3",
-    "uuid-validate": "^0.0.3"
+    "uuid-validate": "^0.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -57,10 +64,14 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cache-manager": "^4.0.6",
     "@types/date-fns": "^2.6.0",
+    "@types/emailjs-mime-codec": "^2.0.2",
     "@types/express": "^4.17.17",
+    "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.2",
+    "@types/mailparser": "^3.4.4",
     "@types/md5": "^2.3.5",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
