--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.4",
     "socks-proxy-agent": "^8.0.3",
     "telegraf": "^4.16.3",
     "uuid-validate": "^0.0.3",
@@ -74,6 +76,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
     "@types/uuid-validate": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
