--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /dist
 /node_modules
 /build
+downloads/*
+
 
 # Logs
 logs
@@ -21,7 +23,6 @@ lerna-debug.log*
 
 # IDEs and editors
 /.idea
-/.downloads
 .project
 .classpath
 .c9/
