--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.8",
     "@prisma/client": "^5.13.0",
     "argon2": "^0.40.1",
     "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
     "date-fns": "^3.6.0",
     "emailjs-mime-codec": "^2.0.9",
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "imap": "^0.8.19",
     "mailparser": "^3.7.1",
@@ -68,6 +71,8 @@
     "@types/date-fns": "^2.6.0",
     "@types/emailjs-mime-codec": "^2.0.2",
     "@types/express": "^4.17.17",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/hbs": "^4.0.4",
     "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.2",
     "@types/mailparser": "^3.4.4",
