--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ PROXY_LIST="socks5://login:password@ip:port",
 TTL_CASH=86400000
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
 API_DONOR="https://example.ru/api/"
+HOST_SITE="http://localhost:3001/"
