--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sharp": "^0.33.4",
     "socks-proxy-agent": "^8.0.3",
     "telegraf": "^4.16.3",
+    "uuid": "^9.0.1",
     "uuid-validate": "^0.0.3",
     "zod": "^3.23.8"
   },
@@ -83,6 +84,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
     "@types/uuid-validate": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
