--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 HOST="localhost"
 IP=3001
+DOMAIN="http://localhost:3001"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/name?schema=public"
 TELEGRAM_TOKEN="58133121792:AAECZadad9qzTrfaYclGZ0T_wEVB9fadaabvNjQ"
 TELEGRAM_ADMIN_ID=730129461,
 ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
-PROXY_LIST="socks5://login:password@ip:port",
 TTL_CASH=86400000
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
 API_DONOR="https://example.ru/api/"
