--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
 TTL_CASH=86400000
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
 API_DONOR="https://example.ru/api/"
+API_DONOR="https://example.ru/"
