add get accessTokenCourse

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 HOST="localhost"
-IP=3001
+PORT=3001
 DOMAIN="http://localhost:3001"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/name?schema=public"
 TELEGRAM_TOKEN="58133121792:AAECZadad9qzTrfaYclGZ0T_wEVB9fadaabvNjQ"
@@ -7,5 +7,9 @@ TELEGRAM_ADMIN_ID=730129461,
 ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
 TTL_CASH=86400000
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
-API_DONOR="https://example.ru/api/"
-API_DONOR="https://example.ru/"
+HOST_DONOR="example.ru"
+API_DONOR="https://${HOST_DONOR}/api/"
+HOST_DONOR_SITE="example1.ru"
+API_DONOR_SITE="https://${HOST_DONOR_SITE}"
+X_REQUESTED_WITH="ru.example.app"
+ONLINE_COURSES="https://example.ru/"
