--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,10 @@ HOST_DONOR_SITE="example1.ru"
 API_DONOR_SITE="https://${HOST_DONOR_SITE}"
 X_REQUESTED_WITH="ru.example.app"
 ONLINE_COURSES="https://example.ru/"
+
+HOST_BOTT="example.com"
+API_BOTT_W_PROTOCOL="https://api.${HOST_BOTT}/"
+HOST_BOTT_W_PROTOCOL="https://${HOST_BOTT}/"
+SELLER_TRADE_BOT_ID="32569"
+SELLER_TRADE_TOKEN="648eqe23:AFDDR_TQGt762fsdfsdfH3gUTa8Rk0"
+
