--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "emailjs-mime-codec": "^2.0.9",
@@ -57,6 +58,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.3",
+    "qs": "^6.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
