--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf2pic": "^3.1.3",
     "qrcode": "^1.5.3",
     "qs": "^6.13.0",
     "reflect-metadata": "^0.2.0",
