--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/schedule": "^4.1.1",
     "@prisma/client": "^5.13.0",
     "argon2": "^0.40.1",
     "axios": "^1.6.8",
