--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "hbs": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "imap": "^0.8.19",
+    "koffi": "^2.11.0",
     "mailparser": "^3.7.1",
     "md5": "^2.3.0",
     "mimelib": "^0.3.1",
@@ -58,12 +59,16 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "patchright": "^1.52.4",
     "pdf2pic": "^3.1.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.3",
     "qs": "^6.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
+    "sleep-promise": "^9.1.0",
     "socks-proxy-agent": "^8.0.3",
     "telegraf": "^4.16.3",
     "uuid": "^9.0.1",
