--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ HOST_BOTT_W_PROTOCOL="https://${HOST_BOTT}/"
 SELLER_TRADE_BOT_ID="32569"
 SELLER_TRADE_TOKEN="648eqe23:AFDDR_TQGt762fsdfsdfH3gUTa8Rk0"
 
+TLS_FORWARDER_URL=http://127.0.0.1:8080/api/forward
+TLS_FORWARDER_API_KEY=auth-key-228
+TLS_CLIENT_IDENTIFIER=okhttp4_android_11
