--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/schedule": "^4.1.1",
     "@prisma/client": "^6.4.1",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.9",
     "argon2": "^0.40.1",
     "axios": "^1.6.8",
     "cache-manager": "^5.5.2",
@@ -56,6 +58,7 @@
     "nestjs-telegraf": "^2.7.0",
     "nestjs-zod": "^3.0.0",
     "nodemailer": "^6.9.13",
+    "pako": "^2.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -79,6 +82,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/amqplib": "^0.10.7",
     "@types/cache-manager": "^4.0.6",
     "@types/date-fns": "^2.6.0",
     "@types/emailjs-mime-codec": "^2.0.2",
@@ -91,6 +95,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.15",
+    "@types/pako": "^2.0.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
