--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,43 @@
-TG_ADMIN="t.me/example"
-SHOP_TELEGRAM="@example_bot"
+NODE_ENV=developer
 
-HOST="localhost"
-PORT=3001
-DOMAIN="http://localhost:3001"
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/name?schema=public"
-TELEGRAM_TOKEN="58133121792:AAECZadad9qzTrfaYclGZ0T_wEVB9fadaabvNjQ"
-TELEGRAM_ADMIN_ID=730129461,
-ZENNO_HASH="fwee23dasdsadffabjdasjfaf3e2ugeidq"
+HOST=127.0.0.1
+PORT=01
+DOMAIN="http://127.0.0.1:01"
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=nameBD
+DATABASE_URL=postgresql://redmi:postgres@127.0.0.1:55432/nameBD?schema=public
+
+RABBITMQ_URL=amqp://guest:guest@127.0.0.1:35672/
+
+TLS_FORWARDER_URL=http://127.0.0.1:8080/api/forward
+TLS_FORWARDER_API_KEY=dsad-key-1
+TLS_CLIENT_IDENTIFIER=okhttp4_android_11
+
+TG_ADMIN="t.me/example"
+SHOP_TELEGRAM="@example_accbot"
+
+TELEGRAM_TOKEN="76813431792:AAGxv2q4210rMt-fC09IsGAK8k432YHGuhZAk"
+TELEGRAM_ADMIN_ID=7431263768,
+
+TELEGRAM_NAMES_EXCEPTION_STATISTIC=example1,example2
+TELEGRAM_ID_VIP_COEF=5344271748,623894286
+
+ZENNO_HASH="wfe233FF322dawedwfbdfabjdasjdg32yeiuqewdq"
 TTL_CASH=86400000
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
-HOST_DONOR="example.ru"
+HOST_DONOR="api.example.ru"
 API_DONOR="https://${HOST_DONOR}/api/"
-HOST_DONOR_SITE="example1.ru"
-API_DONOR_SITE="https://${HOST_DONOR_SITE}"
+HOST_DONOR_SITE="example.ru"
+API_DONOR_SITE="https://${HOST_DONOR_SITE}/"
 X_REQUESTED_WITH="ru.example.app"
 ONLINE_COURSES="https://example.ru/"
 
 HOST_BOTT="example.com"
 API_BOTT_W_PROTOCOL="https://api.${HOST_BOTT}/"
 HOST_BOTT_W_PROTOCOL="https://${HOST_BOTT}/"
-SELLER_TRADE_BOT_ID="32569"
-SELLER_TRADE_TOKEN="648eqe23:AFDDR_TQGt762fsdfsdfH3gUTa8Rk0"
+SELLER_TRADE_BOT_ID="43435"
+SELLER_TRADE_TOKEN="64fas30:AwebRreqwGt762gRUvkxsg0lrw3gUTfsdfk0"
 
-TLS_FORWARDER_URL=http://127.0.0.1:8080/api/forward
-TLS_FORWARDER_API_KEY=auth-key-228
-TLS_CLIENT_IDENTIFIER=okhttp4_android_11
+
