--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,26 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    container_name: redisAvito
+    image: redis:8.4.0-alpine
+    command: >
+      redis-server
+      --appendonly yes
+      --appendfsync everysec
+      --requirepass ${REDIS_PASSWORD:-redispassword}
+    restart: unless-stopped
+    ports:
+    - "6379:6379"
+    volumes:
+    - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redispassword}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   pgdata:
   rabbitmqdata:
+  redisdata:
