--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schedule": "^4.1.1",
+    "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^6.4.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.9",
@@ -72,6 +74,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
     "sleep-promise": "^9.1.0",
+    "socket.io": "^4.8.1",
     "socks-proxy-agent": "^8.0.3",
     "telegraf": "^4.16.3",
     "uuid": "^9.0.1",
