--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.3",
     "qs": "^6.13.0",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
@@ -102,6 +103,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
+    "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
     "@types/uuid-validate": "^0.0.3",
