--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,7 @@ POSTGRES_DB=nameBD
 DATABASE_URL=postgresql://redmi:postgres@127.0.0.1:55432/nameBD?schema=public&connection_limit=20&connect_timeout=30
 
 RABBITMQ_URL=amqp://guest:guest@127.0.0.1:35672/
-
-REDIS_PASSWORD=password
+REDIS_CONNECTION_URL=redis://:redispassword@localhost:6379/0
 
 TLS_FORWARDER_URL=http://127.0.0.1:8080/api/forward
 TLS_FORWARDER_API_KEY=dsad-key-1
