--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ TELEGRAM_NAMES_EXCEPTION_STATISTIC=example1,example2
 TELEGRAM_ID_VIP_COEF=5344271748,623894286
 
 ZENNO_HASH="wfe233FF322dawedwfbdfabjdasjdg32yeiuqewdq"
-TTL_CASH=86400000
+TTL_CASH=86400
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
 HOST_DONOR="api.example.ru"
 API_DONOR="https://${HOST_DONOR}/api/"
