--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,7 +50,7 @@ services:
       retries: 5
 
   redis:
-    container_name: redisAvito
+    container_name: redisSM
     image: redis:8.4.0-alpine
     command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD:-redispassword}"
     restart: unless-stopped
