add route and link for update 3.6.3

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ TLS_CLIENT_IDENTIFIER=okhttp4_android_11
 
 TG_ADMIN="t.me/example"
 SHOP_TELEGRAM="@example_accbot"
+CHANGE_BOT_TELEGRAM="test_bot"
 
 TELEGRAM_TOKEN="76813431792:AAGxv2q4210rMt-fC09IsGAK8k432YHGuhZAk"
 TELEGRAM_ADMIN_ID=7431263768,
