--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "build": "nest build -p tsconfig.build.json",
+    "start": "nest start -p tsconfig.build.json",
+    "start:dev": "nest start --watch -p tsconfig.json",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint . --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -26,24 +26,27 @@
     "ts-check-errors": "tsc --noemit"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/cqrs": "^10.2.7",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/platform-socket.io": "^11.1.9",
-    "@nestjs/schedule": "^4.1.1",
-    "@nestjs/websockets": "^11.1.9",
-    "@prisma/client": "^6.4.1",
-    "amqp-connection-manager": "^4.1.14",
+    "@dryft/tlsclient": "^1.0.8",
+    "@nestjs/common": "^11.1.10",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.10",
+    "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.10",
+    "@nestjs/platform-socket.io": "^11.1.10",
+    "@nestjs/schedule": "^6.1.0",
+    "@nestjs/websockets": "^11.1.10",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
     "argon2": "^0.40.1",
-    "axios": "^1.6.8",
+    "axios": "^1.13.2",
+    "class-transformer": "^0.5.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "email-validator": "^2.0.4",
     "emailjs-mime-codec": "^2.0.9",
     "express-handlebars": "^7.1.2",
@@ -51,25 +54,22 @@
     "hbs": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "imap": "^0.8.19",
-    "koffi": "^2.11.0",
     "mailparser": "^3.7.1",
     "md5": "^2.3.0",
     "mimelib": "^0.3.1",
-    "nestjs-telegraf": "^2.7.0",
-    "nestjs-zod": "^3.0.0",
+    "nestjs-telegraf": "^2.9.1",
+    "nestjs-zod": "^5.0.1",
     "nodemailer": "^6.9.13",
     "pako": "^2.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "patchright": "^1.52.4",
     "pdf2pic": "^3.1.3",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.3",
     "qs": "^6.13.0",
     "redis": "^5.10.0",
-    "reflect-metadata": "^0.2.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
     "sleep-promise": "^9.1.0",
@@ -78,18 +78,19 @@
     "telegraf": "^4.16.3",
     "uuid": "^9.0.1",
     "uuid-validate": "^0.0.3",
-    "zod": "^3.23.8"
+    "zod": "^4.2.1",
+    "koffi": "^2.15.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/amqplib": "^0.10.7",
+    "@nestjs/cli": "^11.0.14",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.10",
+    "@types/amqplib": "^0.10.8",
     "@types/cache-manager": "^4.0.6",
-    "@types/date-fns": "^2.6.0",
     "@types/emailjs-mime-codec": "^2.0.2",
-    "@types/express": "^4.17.17",
-    "@types/express-handlebars": "^6.0.0",
+    "@types/express": "^5.0.6",
     "@types/hbs": "^4.0.4",
     "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.2",
@@ -105,21 +106,27 @@
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
     "@types/uuid-validate": "^0.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "prisma": "^6.4.1",
+    "prisma": "^7.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "webpack-node-externals": "^3.0.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.0",
+    "@eslint/js": "^9.39.2",
+    "@types/pg": "^8.16.0",
+    "concurrently": "^9.1.2",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
