--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "baseUrl": "./",
     "paths": {
       "@common/*": ["./src/common/*"],
+      "@core/*": ["./src/core/*"],
       "@libs/contracts/*": ["./libs/contracts/*"]
     },
     "incremental": true,
