--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "amqplib": "^0.10.9",
     "argon2": "^0.40.1",
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
@@ -55,6 +56,7 @@
     "hbs": "^4.2.0",
     "iconv-lite": "^0.6.3",
     "imap": "^0.8.19",
+    "koffi": "^2.15.0",
     "mailparser": "^3.7.1",
     "md5": "^2.3.0",
     "mimelib": "^0.3.1",
@@ -67,6 +69,8 @@
     "passport-local": "^1.0.0",
     "pdf2pic": "^3.1.3",
     "pg": "^8.16.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.3",
     "qs": "^6.13.0",
     "redis": "^5.10.0",
@@ -79,12 +83,10 @@
     "telegraf": "^4.16.3",
     "uuid": "^9.0.1",
     "uuid-validate": "^0.0.3",
-    "zod": "^4.2.1",
-    "koffi": "^2.15.0",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.10",
@@ -102,6 +104,7 @@
     "@types/pako": "^2.0.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/pg": "^8.16.0",
     "@types/qrcode": "^1.5.5",
     "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.0",
@@ -109,10 +112,14 @@
     "@types/uuid-validate": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "jest": "^29.5.0",
+    "patch-package": "^8.0.1",
+    "prettier": "^3.7.4",
     "prisma": "^7.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -120,15 +127,9 @@
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "webpack-node-externals": "^3.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
-    "@eslint/js": "^9.39.2",
-    "@types/pg": "^8.16.0",
-    "concurrently": "^9.1.2",
-    "globals": "^16.5.0",
-    "prettier": "^3.7.4",
-    "patch-package": "^8.0.1"
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
