add xUserId check, add index for

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ ZENNO_HASH="wfe233FF322dawedwfbdfabjdasjdg32yeiuqewdq"
 TTL_CASH=86400
 TIME_DURATION_PROXY_BLOCK_IN_MIN=5
 HOST_DONOR="api.example.ru"
-API_DONOR="https://${HOST_DONOR}/api/"
+API_DONOR="https://www.${HOST_DONOR}/api/"
 HOST_DONOR_SITE="example.ru"
 API_DONOR_SITE="https://${HOST_DONOR_SITE}/"
 X_REQUESTED_WITH="ru.example.app"
