add: course view bullmq

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DATABASE_URL=postgresql://redmi:postgres@127.0.0.1:55432/nameBD?schema=public&co
 RABBITMQ_URL=amqp://guest:guest@127.0.0.1:35672/
 REDIS_CONNECTION_URL=redis://:redispassword@localhost:6379/0
 
+DASHBOARD_BULL_USER=admin
+DASHBOARD_BULL_PASS=secret44
+
 PROXY_BLOCK_TIME_MINUTES=60
 
 TG_ADMIN="t.me/example"
