--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@bull-board/api": "^6.16.2",
+    "@bull-board/express": "^6.16.2",
+    "@bull-board/nestjs": "^6.16.2",
     "@dryft/tlsclient": "^1.0.8",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.1.10",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.10",
@@ -44,12 +48,14 @@
     "amqplib": "^0.10.9",
     "argon2": "^0.40.1",
     "axios": "^1.13.2",
+    "bullmq": "^5.66.5",
     "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "email-validator": "^2.0.4",
     "emailjs-mime-codec": "^2.0.9",
+    "express-basic-auth": "^1.2.1",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
